k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gestor-backend
  labels:
    name: gestor-backend
