k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestor-backend-service
  labels:
    app: gestor-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: gestor-backend
